1. "make menuconfig" sets CONFIG_PNOTIFY_USER define now     2. added placeholders for pnotify_user.c and pnotify_fsnotify.c

--- a/fs/notify/Makefile
+++ b/fs/notify/Makefile
@@ -3,4 +3,5 @@ obj-$(CONFIG_FSNOTIFY)		+= fsnotify.o notification.o group.o inode_mark.o \
 
 obj-y			+= dnotify/
 obj-y			+= inotify/
+obj-y           += pnotify/
 obj-y			+= fanotify/
