--- a/fs/notify/Kconfig
+++ b/fs/notify/Kconfig
@@ -4,4 +4,5 @@ config FSNOTIFY
 
 source "fs/notify/dnotify/Kconfig"
 source "fs/notify/inotify/Kconfig"
+source "fs/notify/pnotify/Kconfig"
 source "fs/notify/fanotify/Kconfig"
